# minijson

./: CMakeLists.txt  LICENSE  README.md
src/: minijson.cpp  minijson.h
tests/: main.cpp  minijsontests.cpp
tools/: minijsonbeautifymain.cpp  minijsonvalidatemain.cpp
